--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/gardener-nyc/sanity-plugin-webhook-deploy.git"
+    "url": "git@github.com:VitalikMelnyk/sanity-plugin-webhook-deploy.git"
   },
   "keywords": [
     "sanity",
     "sanity-plugin"
   ],
-  "author": "Ian Hatcher-Williams <ian@gardener.nyc>",
+  "author": "Vitalii Melnyk <vmelnyk@solvd.com>",
   "license": "MIT",
   "dependencies": {
     "@sanity/icons": "^1.2.3",
@@ -39,9 +39,9 @@
     "react": "^17.0.0"
   },
   "bugs": {
-    "url": "https://github.com/gardener-nyc/sanity-plugin-webhook-deploy/issues"
+    "url": "https://github.com/VitalikMelnyk/sanity-plugin-webhook-deploy/issues"
   },
-  "homepage": "https://github.com/gardener-nyc/sanity-plugin-webhook-deploy#readme",
+  "homepage": "https://github.com/VitalikMelnyk/sanity-plugin-webhook-deploy",
   "prettier": {
     "semi": false,
     "printWidth": 100,
